Made sure that all pages have the same theme, added background colors to anchor tags, and added some code to the wordle.js file

--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
     <title>Mour's Portfolio</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="head-banner">
         <h1>Mour Wagner</h1>
-        <img src="https://i.imgur.com/MF0CbXI.jpg" alt="Tech Banner">
     </div>
     <nav class="page-tiles">
-        <a href="/about/index.html">About Me</a>
-        <a href="/myprojects/index.html">Portfolio</a>
-        <a href="/contact/index.html">Contact</a>
+        <a id='about-me' href="/about/index.html">About Me</a>
+        <a id='portfolio' href="/myprojects/index.html">Portfolio</a>
+        <a id='contact' href="/contact/index.html">Contact</a>
     </nav>
-    <div id="container">
-        <main id="main-content">
+    <div id="main-container">
             <h2>Welcome to my webpage!</h2>
-            <p>I'm an inspiring software engineer, learning whatever</p>
-        </main>
+            <p>I'm a Software Engineering Student at General Assembly! My goal from the class is to come out with the skills I need to become a sucessful Software Engineer!</p>
     </div>
     
     <footer>
