--- a/about/index.html
+++ b/about/index.html
@@ -10,14 +10,13 @@
 </head>
 <body>
     <div id="head-banner">
-        <h1>ABOUT ME</h1>
-        <img src="https://i.imgur.com/MF0CbXI.jpg" alt="Tech Banner">
+        <h1>About Me</h1>
     </div>
 
     <nav class="page-tiles">
-        <a href="/index.html">Home Page</a>
-        <a href="/myprojects/index.html">Portfolio</a>
-        <a href="/contact/index.html">Contact</a>
+        <a id="homepage" href="/index.html">Home Page</a>
+        <a id="portfolio" href="/myprojects/index.html">Portfolio</a>
+        <a id="contact" href="/contact/index.html">Contact</a>
     </nav>
     
     <div class="about-container">
@@ -29,6 +28,7 @@
             </div>
             <div class="carousel-images">
                 <img src="https://i.imgur.com/wVXdFXY.jpg" alt="Me in Ireland">
+                <img src="https://i.imgur.com/cWPNF0K.jpg" alt="Photo of Me">
             </div>
             <div class="carousel-next-btn">
                 <!--To add img link for button-->
