--- a/contact/index.html
+++ b/contact/index.html
@@ -10,26 +10,20 @@
 </head>
 <body>
     <div id="head-banner">
-        <h1>My Portfolio</h1>
-        <img src="https://i.imgur.com/MF0CbXI.jpg" alt="Tech Banner">
+        <h1>Contact Me</h1>
     </div>
     <nav class="page-tiles">
-        <a href="/index.html">Home Page</a>
-        <a href="/about/index.html">About Me</a>
-        <a href="/myprojects/index.html">Portfolio</a>
+        <a id="homepage" href="/index.html">Home Page</a>
+        <a id="about-me" href="/about/index.html">About Me</a>
+        <a id="portfolio" href="/myprojects/index.html">Portfolio</a>
     </nav>
     <div class="mainoutline">
         <header>
-            <h1>CONTACT ME</h1>
+            <h1>You can reach out to me through the following social media platforms, and download a copy of my resume</h1>
         </header>
-
-        <main>
-            
-        </main>
-
-        <footer>
-
-        </footer>
+        <div class="socials-icons">
+            <img src=""
+        </div>
     </div>
 </body>
 </html>
