--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -7,25 +7,21 @@
     <title>Projects</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
+    <script src="wordle.js"></script>
 </head>
 <body>
     <div id="head-banner">
         <h1>My Portfolio</h1>
-        <img src="https://i.imgur.com/MF0CbXI.jpg" alt="Tech Banner">
     </div>
     <nav class="page-tiles">
-        <a href="/index.html">Home Page</a>
-        <a href="/about/index.html">About Me</a>
-        <a href="/contact/index.html">Contact</a>
+        <a id="homepage" href="/index.html">Home Page</a>
+        <a id="about-me" href="/about/index.html">About Me</a>
+        <a id="contact" href="/contact/index.html">Contact</a>
     </nav>
-    <div class="mainoutline">
         <header>
-            <h1>PORTFOLIO</h1>
+            <h1>Projects I've worked on:</h1>
         </header>
-
-        <main>
-            
-        </main>
+        <div class="wordle.container"></div>
 
         <footer>
 
