--- a/contact/index.html
+++ b/contact/index.html
@@ -13,17 +13,26 @@
         <h1>Contact Me</h1>
     </div>
     <nav class="page-tiles">
-        <a id="homepage" href="/index.html">Home Page</a>
-        <a id="about-me" href="/about/index.html">About Me</a>
-        <a id="portfolio" href="/myprojects/index.html">Portfolio</a>
+        <a id="homepage" class="pagenav" href="/index.html">Home Page</a>
+        <a id="about-me" class="pagenav" href="/about/index.html">About Me</a>
+        <a id="portfolio" class="pagenav" href="/myprojects/index.html">Portfolio</a>
     </nav>
-    <div class="mainoutline">
-        <header>
-            <h1>You can reach out to me through the following social media platforms, and download a copy of my resume</h1>
-        </header>
-        <div class="socials-icons">
-            <img src=""
-        </div>
+    <header>
+        <h1>You can reach out to me through the following social media platforms, and download a copy of my resume!</h1>
+    </header>
+    <div class="socials-icons">
+        <a id="github" href="https://github.com/rswagner13" target="_blank">
+            <img src="https://i.imgur.com/2DQLhJG.png" alt="GitHub Page">
+        </a>
+        <a id="linkedin" href="https://www.linkedin.com/in/rswagner23/" target="_blank">
+            <img src="https://i.imgur.com/rFOjYg9.png" alt="LinkedIn Profile">
+        </a>
+        <a id="email" href="mailto: mourwagner13@gmail.com" target="_blank">
+            <img src="https://i.imgur.com/K4GzkJC.png" alt="email">
+        </a>
+        <a id="resume" href="https://drive.google.com/file/d/1DtEY9KOYJ2-J1KDcrl3tTzKubLnMyXa5/view?usp=drive_link" target="_blank">
+            <img src="https://i.imgur.com/46CJe7Y.png" alt="resume">
+        </a>
     </div>
 </body>
 </html>
