--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
         <h1>Mour Wagner</h1>
     </div>
     <nav class="page-tiles">
-        <a id='about-me' href="/about/index.html">About Me</a>
-        <a id='portfolio' href="/myprojects/index.html">Portfolio</a>
-        <a id='contact' href="/contact/index.html">Contact</a>
+        <a id='about-me' class="pagenav" href="/about/index.html">About Me</a>
+        <a id='portfolio' class="pagenav" href="/myprojects/index.html">Portfolio</a>
+        <a id='contact' class="pagenav" href="/contact/index.html">Contact</a>
     </nav>
     <div id="main-container">
+        <div id="welcome-info">
             <h2>Welcome to my webpage!</h2>
             <p>I'm a Software Engineering Student at General Assembly! My goal from the class is to come out with the skills I need to become a sucessful Software Engineer!</p>
+        </div>
+        <img src="https://i.imgur.com/cWPNF0K.jpg" alt="Photo of Me">
     </div>
     
     <footer>
