--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -14,9 +14,9 @@
         <h1>My Portfolio</h1>
     </div>
     <nav class="page-tiles">
-        <a id="homepage" href="/index.html">Home Page</a>
-        <a id="about-me" href="/about/index.html">About Me</a>
-        <a id="contact" href="/contact/index.html">Contact</a>
+        <a id="homepage" class="pagenav" href="/index.html">Home Page</a>
+        <a id="about-me" class="pagenav" href="/about/index.html">About Me</a>
+        <a id="contact" class="pagenav" href="/contact/index.html">Contact</a>
     </nav>
         <header>
             <h1>Projects I've worked on:</h1>
