Main addition was coding the appearance of the world game board when you click on the start button

--- a/about/index.html
+++ b/about/index.html
@@ -22,8 +22,7 @@
     
     <div class="about-container">
         <div class="aboutme-blurb">
-            <h2>About Me</h2>
-            <p>I made attempts while in college to earn a degree in Computer Science, but was unsucessful. I ended up bouncing around colleges/degree paths until I graduated from William Peace University in 2016 with a degree in Similuation in Game Design (3D Modeling.) From there, I worked at two different companies in Finance up until October of this year (2023.)</p>
+            <p>After many years of figuring out what I wanted to do in college, I graduated from William Peace University in 2016 with a degree in Similuation in Game Design (3D Modeling.) From there, I worked at two different companies in Finance up until October of this year when my position was terminated. I've heard so many good things about the programs at GA, and I thought that now was the best time for me to take one! </p>
         </div>
         <div class="carousel-container">
             <div class="carousel-btn previous">
@@ -32,6 +31,7 @@
             <div class="carousel-images">
                 <img src="https://i.imgur.com/wVXdFXY.jpg" alt="Me in Ireland" class="images">
                 <img src="https://i.imgur.com/ZbINzPO.jpg" alt="Photo of Us" class="images">
+                <img src="https://i.imgur.com/3MgSlvq.jpg" alt="Photo of Us number 2" class="images">
             </div>
             <div class="carousel-btn next">
                 <img src="https://i.imgur.com/AlMEQ1b.png" alt="next image">
