testing to see if adding relative file path will fix the issue I'm currently experiencing with deploying my site to GitHub

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Mour Wagner</h1>
     </div>
     <nav class="page-tiles">
-        <a id='about-me' class="pagenav" href="https://rswagner13.github.io/about/index.html">About Me</a>
-        <a id='portfolio' class="pagenav" href="https://rswagner13.github.io/myprojects/index.html">Portfolio</a>
-        <a id='contact' class="pagenav" href="https://rswagner13.github.io/contact/index.html">Contact</a>
+        <a id='about-me' class="pagenav" href="../about/index.html">About Me</a>
+        <a id='portfolio' class="pagenav" href="../myprojects/index.html">Portfolio</a>
+        <a id='contact' class="pagenav" href="../contact/index.html">Contact</a>
     </nav>
     <div id="main-container">
         <div id="welcome-info">
