made changes to file paths

--- a/contact/index.html
+++ b/contact/index.html
@@ -13,9 +13,9 @@
         <h1>Contact Me</h1>
     </div>
     <nav class="page-tiles">
-        <a id="homepage" class="pagenav" href="/index.html">Home Page</a>
-        <a id="about-me" class="pagenav" href="/about/index.html">About Me</a>
-        <a id="portfolio" class="pagenav" href="/myprojects/index.html">Portfolio</a>
+        <a id="homepage" class="pagenav" href="../index.html">Home Page</a>
+        <a id="about-me" class="pagenav" href="../about/index.html">About Me</a>
+        <a id="portfolio" class="pagenav" href="../myprojects/index.html">Portfolio</a>
     </nav>
     <header>
         <h1>You can reach out to me through the following social media platforms, and download a copy of my resume!</h1>
