--- a/about/index.html
+++ b/about/index.html
@@ -15,9 +15,9 @@
     </div>
 
     <nav class="page-tiles">
-        <a id="homepage" class="pagenav" href="/index.html">Home Page</a>
-        <a id="portfolio" class="pagenav" href="/myprojects/index.html">Portfolio</a>
-        <a id="contact" class="pagenav" href="/contact/index.html">Contact</a>
+        <a id="homepage" class="pagenav" href="../index.html">Home Page</a>
+        <a id="portfolio" class="pagenav" href="../myprojects/index.html">Portfolio</a>
+        <a id="contact" class="pagenav" href="../contact/index.html">Contact</a>
     </nav>
     
     <div class="about-container">
