Created an onscreen keyboard with buttons

--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -33,6 +33,38 @@
             </div>
             
         </div>
+        <div id="keyboard">
+            <div class="keyboard-keys">
+                <button class="keys">A</button>
+                <button class="keys">B</button>
+                <button class="keys">C</button>
+                <button class="keys">D</button>
+                <button class="keys">E</button>
+                <button class="keys">F</button>
+                <button class="keys">G</button>
+                <button class="keys">H</button>
+                <button class="keys">I</button>
+                <button class="keys">J</button>
+                <button class="keys">K</button>
+                <button class="keys">L</button>
+                <button class="keys">M</button>
+                <button class="keys">N</button>
+                <button class="keys">O</button>
+                <button class="keys">P</button>
+                <button class="keys">Q</button>
+                <button class="keys">R</button>
+                <button class="keys">S</button>
+                <button class="keys">T</button>
+                <button class="keys">U</button>
+                <button class="keys">V</button>
+                <button class="keys">W</button>
+                <button class="keys">X</button>
+                <button class="keys">Y</button>
+                <button class="keys">Z</button>
+                <button class="keys" id="delete">Delete</button>
+                <button class="keys" id="enter">Enter</button>
+            </div>
+        </div>
         <div class="start">
             <button id="startbtn">Start Game</button>
         </div>   
