made changes to how the Wordle board appeared on screen, and added some code to allow the player to type on the first line of the game board

--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Projects</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="#">
     <link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
-    <script src="wordle.js" defer></script>
+    <script src="wordle.js" type='module' defer></script>
 </head>
 <body>
     <div id="head-banner">
@@ -34,33 +35,33 @@
             
         </div>
         <div id="keyboard">
-            <div class="keyboard-keys">
-                <button class="keys">A</button>
-                <button class="keys">B</button>
-                <button class="keys">C</button>
-                <button class="keys">D</button>
-                <button class="keys">E</button>
-                <button class="keys">F</button>
-                <button class="keys">G</button>
-                <button class="keys">H</button>
-                <button class="keys">I</button>
-                <button class="keys">J</button>
-                <button class="keys">K</button>
-                <button class="keys">L</button>
-                <button class="keys">M</button>
-                <button class="keys">N</button>
-                <button class="keys">O</button>
-                <button class="keys">P</button>
-                <button class="keys">Q</button>
-                <button class="keys">R</button>
-                <button class="keys">S</button>
-                <button class="keys">T</button>
-                <button class="keys">U</button>
-                <button class="keys">V</button>
-                <button class="keys">W</button>
-                <button class="keys">X</button>
-                <button class="keys">Y</button>
-                <button class="keys">Z</button>
+            <div id="keyboard-keys">
+                <button class="keys" id="31">A</button>
+                <button class="keys" id="32">B</button>
+                <button class="keys" id="33">C</button>
+                <button class="keys" id="34">D</button>
+                <button class="keys" id="35">E</button>
+                <button class="keys" id="36">F</button>
+                <button class="keys" id="37">G</button>
+                <button class="keys" id="38">H</button>
+                <button class="keys" id="39">I</button>
+                <button class="keys" id="40">J</button>
+                <button class="keys" id="41">K</button>
+                <button class="keys" id="42">L</button>
+                <button class="keys" id="43">M</button>
+                <button class="keys" id="44">N</button>
+                <button class="keys" id="45">O</button>
+                <button class="keys" id="46">P</button>
+                <button class="keys" id="47">Q</button>
+                <button class="keys" id="48">R</button>
+                <button class="keys" id="49">S</button>
+                <button class="keys" id="50">T</button>
+                <button class="keys" id="51">U</button>
+                <button class="keys" id="52">V</button>
+                <button class="keys" id="53">W</button>
+                <button class="keys" id="54">X</button>
+                <button class="keys" id="55">Y</button>
+                <button class="keys" id="56">Z</button>
                 <button class="keys" id="delete">Delete</button>
                 <button class="keys" id="enter">Enter</button>
             </div>
