--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -26,14 +26,10 @@
         <div id="game-title">
             <h1>Wordle</h1>
         </div>
-        <div id="game-container">
+    <div id="game-container">
             <div id="wordle-board-container">
-                <div id="wordle-game-board">
-
-                </div>
+                <div id="wordle-game-board"></div>
             </div>
-            
-        </div>
         <div id="keyboard">
             <div id="keyboard-keys">
                 <button class="keys" id="31">A</button>
