Currently working on a way to show the player what incorrect keys have been used, and a way to remove the event listener for those keys

--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -26,45 +26,45 @@
         <div id="game-title">
             <h1>Wordle</h1>
         </div>
-    <div id="game-container">
+        <div id="game-container">
             <div id="wordle-board-container">
                 <div id="wordle-game-board"></div>
             </div>
+        </div>
         <div id="keyboard">
             <div id="keyboard-keys">
-                <button class="keys" id="31">A</button>
-                <button class="keys" id="32">B</button>
-                <button class="keys" id="33">C</button>
-                <button class="keys" id="34">D</button>
-                <button class="keys" id="35">E</button>
-                <button class="keys" id="36">F</button>
-                <button class="keys" id="37">G</button>
-                <button class="keys" id="38">H</button>
-                <button class="keys" id="39">I</button>
-                <button class="keys" id="40">J</button>
-                <button class="keys" id="41">K</button>
-                <button class="keys" id="42">L</button>
-                <button class="keys" id="43">M</button>
-                <button class="keys" id="44">N</button>
-                <button class="keys" id="45">O</button>
-                <button class="keys" id="46">P</button>
-                <button class="keys" id="47">Q</button>
-                <button class="keys" id="48">R</button>
-                <button class="keys" id="49">S</button>
-                <button class="keys" id="50">T</button>
-                <button class="keys" id="51">U</button>
-                <button class="keys" id="52">V</button>
-                <button class="keys" id="53">W</button>
-                <button class="keys" id="54">X</button>
-                <button class="keys" id="55">Y</button>
-                <button class="keys" id="56">Z</button>
+                <button class="keys" id="A">A</button>
+                <button class="keys" id="B">B</button>
+                <button class="keys" id="C">C</button>
+                <button class="keys" id="D">D</button>
+                <button class="keys" id="E">E</button>
+                <button class="keys" id="F">F</button>
+                <button class="keys" id="G">G</button>
+                <button class="keys" id="H">H</button>
+                <button class="keys" id="I">I</button>
+                <button class="keys" id="J">J</button>
+                <button class="keys" id="K">K</button>
+                <button class="keys" id="L">L</button>
+                <button class="keys" id="M">M</button>
+                <button class="keys" id="N">N</button>
+                <button class="keys" id="O">O</button>
+                <button class="keys" id="P">P</button>
+                <button class="keys" id="Q">Q</button>
+                <button class="keys" id="R">R</button>
+                <button class="keys" id="S">S</button>
+                <button class="keys" id="T">T</button>
+                <button class="keys" id="U">U</button>
+                <button class="keys" id="V">V</button>
+                <button class="keys" id="W">W</button>
+                <button class="keys" id="X">X</button>
+                <button class="keys" id="Y">Y</button>
+                <button class="keys" id="Z">Z</button>
                 <button class="keys" id="delete">Delete</button>
                 <button class="keys" id="enter">Enter</button>
             </div>
         </div>
         <div class="start">
             <button id="startbtn">Start Game</button>
-        </div>   
-    </div>
+        </div>
 </body>
 </html>
