Added a modal that will pop up game messages, and started coding how to restart game after player guesses the word correctly or uses all of their guesses

--- a/contact/index.html
+++ b/contact/index.html
@@ -22,16 +22,16 @@
     </header>
     <div class="socials-icons">
         <a id="github" href="https://github.com/rswagner13" target="_blank">
-            <img src="https://i.imgur.com/2DQLhJG.png" alt="GitHub Page">
+            <img src="https://i.imgur.com/rwGIDC1.png" alt="GitHub Page">
         </a>
         <a id="linkedin" href="https://www.linkedin.com/in/rswagner23/" target="_blank">
-            <img src="https://i.imgur.com/rFOjYg9.png" alt="LinkedIn Profile">
+            <img src="https://i.imgur.com/GRIgsoi.png" alt="LinkedIn Profile">
         </a>
         <a id="email" href="mailto: mourwagner13@gmail.com" target="_blank">
-            <img src="https://i.imgur.com/K4GzkJC.png" alt="email">
+            <img src="https://i.imgur.com/Qy9unlW.png" alt="email">
         </a>
         <a id="resume" href="https://drive.google.com/file/d/1DtEY9KOYJ2-J1KDcrl3tTzKubLnMyXa5/view?usp=drive_link" target="_blank">
-            <img src="https://i.imgur.com/46CJe7Y.png" alt="resume">
+            <img src="https://i.imgur.com/PB498iU.png" alt="resume">
         </a>
     </div>
 </body>
