--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -19,10 +19,13 @@
         <a id="about-me" class="pagenav" href="../about/index.html">About Me</a>
         <a id="contact" class="pagenav" href="../contact/index.html">Contact</a>
     </nav>
-        <header>
-            <h1>Projects I've worked on:</h1>
-        </header>
-
+    <header>
+        <h1>Projects I've worked on:</h1>
+    </header>
+    <div id="modal">
+        <div id="modal-info">
+        </div>
+    </div>
         <div id="game-title">
             <h1>Wordle</h1>
         </div>
