--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="carousel-container">
             <div class="carousel-btn previous">
-                <img src="https://i.imgur.com/LqfhBEH.png" alt="previous image">
+                <img src="https://i.imgur.com/pJPEtFj.png" alt="previous image">
             </div>
             <div class="carousel-images">
                 <img src="https://i.imgur.com/wVXdFXY.jpg" alt="Me in Ireland" class="images">
@@ -34,7 +34,7 @@
                 <img src="https://i.imgur.com/3MgSlvq.jpg" alt="Photo of Us number 2" class="images">
             </div>
             <div class="carousel-btn next">
-                <img src="https://i.imgur.com/AlMEQ1b.png" alt="next image">
+                <img src="https://i.imgur.com/IbD4eY4.png" alt="next image">
             </div>
 
         </div>
