Changed text on Home Page and About Me Page

--- a/about/index.html
+++ b/about/index.html
@@ -22,14 +22,14 @@
     
     <div class="about-container">
         <div class="aboutme-blurb">
-            <p>After many years of figuring out what I wanted to do in college, I graduated from William Peace University in 2016 with a degree in Similuation in Game Design (3D Modeling.) From there, I worked at two different companies in Finance up until October of this year when my position was terminated. I've heard so many good things about the programs at GA, and I thought that now was the best time for me to take one! </p>
+            <p>I graduated from William Peace University in 2016 with a degree in Similuation in Game Design (3D Modeling.) Afterwards, I worked in Finance at two different companies up until October of this year when my position was terminated. I've heard so many good things about the programs at GA, and I thought that now was the best time for me to take one!</p>
         </div>
         <div class="carousel-container">
             <div class="carousel-btn previous">
                 <img src="https://i.imgur.com/pJPEtFj.png" alt="previous image">
             </div>
             <div class="carousel-images">
-                <img src="https://i.imgur.com/wVXdFXY.jpg" alt="Me in Ireland" class="images">
+                <img src="https://i.imgur.com/wVXdFXY.jpg?1" alt="Me in Ireland" class="images">
                 <img src="https://i.imgur.com/ZbINzPO.jpg" alt="Photo of Us" class="images">
                 <img src="https://i.imgur.com/3MgSlvq.jpg" alt="Photo of Us number 2" class="images">
             </div>
