--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="main-container">
         <div id="welcome-info">
             <h2>Welcome to my webpage!</h2>
-            <p>I'm a Software Engineering Student at General Assembly! My goal from the class is to come out with the skills I need to become a sucessful Software Engineer!</p>
+            <p>I'm a Software Engineering Student at General Assembly. My goal from the class is to come out with the skills I need to become a sucessful Software Engineer!</p>
         </div>
         <img src="https://i.imgur.com/cWPNF0K.jpg" alt="Photo of Me">
     </div>
